--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KhudKibook</title>
     <link rel="icon" type="image/x-icon" href="https://neo2708.github.io/pic.github.io/bg.png">
-    <link rel="stylesheet" href="styleit1.css">
-    <link rel="stylesheet" href="index.css">
-    <script src="/public/src.js"></script>
+    <link rel="stylesheet" href="/styleit1.css">
+    <link rel="stylesheet" href="/slider.css">
+    <link rel="stylesheet" href="/index.css">
     <meta name="google-site-verification" content="cQwdBWIbhba4RItxT8gHfbwOF3U6Q9qQtujUT2CtO2s" />
 
 
@@ -40,7 +40,7 @@
     </nav>
     <h1 class="header">GTU Diploma Books & Study Material</h1>
 
-    <!-- <div class="slider">
+    <div class="slider">
         <div class="slide active">
 
             <img class="imgcard" src="https://neo2708.github.io/pic.github.io/001.png" alt="">
@@ -70,9 +70,9 @@
             <div class="btn"></div>
         </div>
 
-    </div> -->
+    </div>
     <div class="all">
-        <a href="/public/it/index.html">
+        <a href="/it/index.html">
             <div class="it">
                 <img class="itimg" src="https://cdn-icons-png.flaticon.com/512/2387/2387667.png" alt="">
 
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </a>
-        <a href="/public/cv/index.html">
+        <a href="/cv/index.html">
             <div class="civil">
                 <img class="itimg" src="https://cdn-icons-png.flaticon.com/512/609/609034.png" alt="">
                 <div class="cvh">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </a>
-        <a href="/public/el/index.html">
+        <a href="/el/index.html">
             <div class="electrical">
                 <img src="https://cdn-icons-png.flaticon.com/512/2907/2907301.png" alt="" class="itimg">
                 <div class="elh">
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </a>
-        <a href="/public/me/index.html">
+        <a href="/me/index.html">
             <div class="mechanical">
                 <img src="https://cdn-icons-png.flaticon.com/512/1995/1995450.png" alt="" class="itimg">
                 <div class="meh">
@@ -106,7 +106,7 @@
                 </div>
             </div>
         </a>
-        <a id="cpli" href="/public/cp/index.html">
+        <a id="cpli" href="/cp/index.html">
             <div class="computer">
                 <img src="https://cdn-icons-png.flaticon.com/512/186/186225.png" alt="" class="itimg">
                 <div class="cph">
@@ -119,7 +119,7 @@
     <h1 class="header1">All GTU-Diploma Books</h1>
     <div class="recommian">
         <!-- English -->
-        <a href="/public/common/">
+        <a href="/common/">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/014.png" alt="" srcset="">
                 <div class="align">
@@ -136,7 +136,7 @@
 
         </a>
         <!-- Maths sem1 -->
-        <a id="macmli" href="/public/common/">
+        <a id="macmli" href="/common/">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/008.png" alt="" srcset="">
                 <div class="align">
@@ -150,7 +150,7 @@
             </div>
         </a>
         <!-- Es -->
-        <a href="/public/common/">
+        <a href="/common/">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/005.png" alt="" srcset="">
                 <div class="align">
@@ -164,7 +164,7 @@
             </div>
         </a>
         <!-- Python -->
-        <a href="/public/it/pythonprogramming.html">
+        <a href="/it/pythonprogramming.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="" srcset="">
                 <div class="align">
@@ -178,7 +178,7 @@
             </div>
         </a>
         <!-- IT System -->
-        <a href="/public/it/itsys.html">
+        <a href="/it/itsys.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/007.png" alt="" srcset="">
                 <div class="align">
@@ -205,5 +205,6 @@
     <h1 class="foottext">--- @KhudKibook ---</h1>
 
 </body>
+<script src="/index.js"></script>
 
 </html>
