--- a/public/it/index.html
+++ b/public/it/index.html
@@ -9,21 +9,21 @@
     <link rel="stylesheet" href="/styleit1.css">
     <link rel="icon" type="image/x-icon" href="https://neo2708.github.io/pic.github.io/bg.png">
 
-    <link rel="stylesheet" href="/public//it/pp.css">
-    <link rel="stylesheet" href="/public/it/index.css">
+    <link rel="stylesheet" href="/it/pp.css">
+    <link rel="stylesheet" href="/it/index.css">
 
 </head>
 
 <body>
     <nav>
         <div id="appbar">
-            <a href="/public/index.html">
+            <a href="/index.html">
                 <img class="headerimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="Logo" srcset="">
             </a>
             <div class="home">
                 <ul>
                     <li>
-                        <a class="home" href="/public/index.html">Home</a>
+                        <a class="home" href="/index.html">Home</a>
                     </li>
                 </ul>
 
@@ -42,10 +42,10 @@
     <h1 class="header1">Semester-1</h1>
     <div class="recommian">
         <!-- Python -->
-        <a href="/public/it/pythonprogramming.html">
+        <a href="/it/pythonprogramming.html">
             <div class="reccontent">
                 <div class="img">
-                    <img class="recimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="" srcset="">
+                    <img class="recimg" src="/img/013.png" alt="" srcset="">
                 </div>
                 <div class="align">
                     <h1 class="recbookname">Python Programming </h1>
@@ -58,9 +58,9 @@
             </div>
         </a>
         <!-- IT SYS -->
-        <a href="/public/it/itsys.html">
+        <a href="/it/itsys.html">
             <div class="reccontent">
-                <img class="recimg"  src="https://neo2708.github.io/pic.github.io/007.png" alt="" srcset="">
+                <img class="recimg" src="/img/007.png" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname">Introduction to IT Systems </h1>
                     <h1 class="desc2">4311602</h1>
@@ -71,9 +71,9 @@
             </div>
         </a>
         <!-- Maths -->
-        <a  href="/public/it/maths.html">
+        <a href="/it/maths.html">
             <div class="reccontent">
-                <img class="recimg"  src="https://neo2708.github.io/pic.github.io/008.png" alt="" srcset="">
+                <img class="recimg" src="/img/008.png" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname">Mathematics </h1>
                     <h1 class="desc2">4300001</h1>
@@ -85,9 +85,9 @@
             </div>
         </a>
         <!-- English -->
-        <a href="/public/it/english.html">
+        <a href="/it/english.html">
             <div class="reccontent">
-                <img class="recimg"  src="https://neo2708.github.io/pic.github.io/014.png" alt="" srcset="">
+                <img class="recimg" src="/img/014.png" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname">Communication Skills in English </h1>
                     <h1 class="desc2">4300002</h1>
@@ -103,10 +103,10 @@
     <h1  class="header1">Semester-2</h1>
     <div  class="recommian">
         <!-- Advance Python -->
-        <a href="/public/it2/app.html">
+        <a href="/it2/app.html">
             <div class="reccontent">
                 <div class="img">
-                    <img class="recimg" src="https://neo2708.github.io/pic.github.io/001.png" alt="" srcset="">
+                    <img class="recimg" src="/img/001.png" alt="" srcset="">
 
                 </div>
                 <div class="align">
@@ -120,9 +120,9 @@
             </div>
         </a>
         <!-- Maths 2 -->
-        <a href="/public/it2/emaths.html">
+        <a href="/it2/emaths.html">
             <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/022.png" alt="" srcset="">
+                <img class="recimg" src="/img/022.png" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname"> Engineering Mathematics </h1>
                     <h1 class="desc2">4320002</h1>
@@ -133,9 +133,9 @@
             </div>
         </a>
         <!--  Physics -->
-        <a href="/public/it2/physics.html">
+        <a href="/it2/physics.html">
             <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
+                <img class="recimg" src="/img/na.webp" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname"> Physics </h1>
                     <h1 class="desc2">4300005</h1>
@@ -147,9 +147,9 @@
             </div>
         </a>
         <!-- ES -->
-        <a href="/public/it2/es.html">
+        <a href="/it2/es.html">
             <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/005.png" alt="" srcset="">
+                <img class="recimg" src="/img/005.png" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname">E.S </h1>
                     <h1 class="desc2">4300003</h1>
@@ -165,10 +165,10 @@
     <h1 class="header1">Semester-3</h1>
     <div class="recommian">
         <!-- Data Structure with Python -->
-        <a href="/public/it3/dsp.html">
+        <a href="/it3/dsp.html">
             <div class="reccontent">
                 <div class="img">
-                    <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
+                    <img class="recimg" src="/img/na.webp" alt="" srcset="">
 
                 </div>
                 <div class="align">
@@ -182,9 +182,9 @@
             </div>
         </a>
         <!-- Database Management -->
-        <a href="/public/it3/dm.html">
+        <a href="/it3/dm.html">
             <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
+                <img class="recimg" src="/img/na.webp" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname"> Database Management </h1>
                     <h1 class="desc2">4331603</h1>
@@ -195,9 +195,9 @@
             </div>
         </a>
         <!--  Linux Operating System -->
-        <a href="/public/it3/linuxOS.html">
+        <a href="/it3/linuxOS.html">
             <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="Image Not Avilable"
+                <img class="recimg" src="/img/na.webp" alt="Image Not Avilable"
                     srcset="">
                 <div class="align">
                     <h1 class="recbookname"> Linux Operating System </h1>
@@ -210,9 +210,9 @@
             </div>
         </a>
         <!--  Fundamentals of Software Development -->
-        <a href="/public/it3/FSD.html">
+        <a href="/it3/FSD.html">
             <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/030.png" alt="" srcset="">
+                <img class="recimg" src="/img/030.png" alt="" srcset="">
                 <div class="align">
                     <h1 class="recbookname"> Fundamentals of Software Development </h1>
                     <h1 class="desc2">4331604</h1>
@@ -227,5 +227,5 @@
     <h1 class="foottext">@KhudKibook</h1>
 
 </body>
-<script src="/public/src.js"></script>
+<script src="/index.js"></script>
 </html>
