--- a/public/it/pythonprogramming.html
+++ b/public/it/pythonprogramming.html
@@ -14,7 +14,7 @@
     <title>IT Diploma Python Programming-KhudKibook </title>
     <meta name="description"
         content="Download GTU Diploma Sem-1 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
-    <link rel="stylesheet" href="/public/it/pp.css">
+    <link rel="stylesheet" href="/it/pp.css">
 
     <link rel="icon" type="image/x-icon" href="https://neo2708.github.io/pic.github.io/bg.png">
 
@@ -31,7 +31,7 @@
             <div class="home">
                 <ul>
                     <li>
-                        <a class="home" href="/public/index.html">Home</a>
+                        <a class="home" href="/index.html">Home</a>
                     </li>
 
                 </ul>
@@ -40,12 +40,12 @@
 
             <ul>
                 <li>
-                    <a class="branch" href="/public/it/index.html">I.T</a>
+                    <a class="branch" href="/it/index.html">I.T</a>
                 </li>
             </ul>
             <ul>
                 <li>
-                    <a class="branch" id="active" href="/public/it/index.html">P.P</a>
+                    <a class="branch" id="active" href="/it/index.html">P.P</a>
                 </li>
             </ul>
 
@@ -68,7 +68,7 @@
                         <button class="miandownloadbtn" class="dropbtn">
                             <div class="drp">
                                 <span>Select Download </span> <img
-                                    src="/public/assests/expand_more_FILL0_wght400_GRAD0_opsz48.png"
+                                    src="/assests/expand_more_FILL0_wght400_GRAD0_opsz48.png"
                                     style="width: 25px;margin-top: 10px;">
                             </div>
                         </button>
@@ -132,7 +132,7 @@
         </div>
         <!--  -->
         <!-- IT SYS -->
-        <a href="/public/it/itsys.html">
+        <a href="/it/itsys.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/007.png" alt="" srcset="">
                 <div class="align">
@@ -145,7 +145,7 @@
             </div>
         </a>
         <!-- Maths -->
-        <a href="/public/it/maths.html">
+        <a href="/it/maths.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/008.png" alt="" srcset="">
                 <div class="align">
@@ -159,7 +159,7 @@
             </div>
         </a>
         <!-- English -->
-        <a href="/public/it/english.html">
+        <a href="/it/english.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/014.png" alt="" srcset="">
                 <div class="align">
@@ -197,7 +197,7 @@
     <h1 class="recmainheader">Semester-2</h1>
     <div class="recommian">
         <!-- Advance Python -->
-        <a href="/public/it2/app.html">
+        <a href="/it2/app.html">
             <div class="reccontent">
                 <div class="img">
                     <img class="recimg" src="https://neo2708.github.io/pic.github.io/001.png" alt="" srcset="">
@@ -214,7 +214,7 @@
             </div>
         </a>
         <!-- Maths 2 -->
-        <a href="/public/it2/emaths.html">
+        <a href="/it2/emaths.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/022.png" alt="" srcset="">
                 <div class="align">
@@ -227,7 +227,7 @@
             </div>
         </a>
         <!--  Physics -->
-        <a href="/public/it2/physics.html">
+        <a href="/it2/physics.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
                 <div class="align">
@@ -241,7 +241,7 @@
             </div>
         </a>
         <!-- ES -->
-        <a href="/public/it2/es.html">
+        <a href="/it2/es.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/005.png" alt="" srcset="">
                 <div class="align">
@@ -260,7 +260,7 @@
     <h1 class="recmainheader">Semester-3</h1>
     <div class="recommian">
         <!-- Data Structure with Python -->
-        <a href="/public/it3/dsp.html">
+        <a href="/it3/dsp.html">
             <div class="reccontent">
                 <div class="img">
                     <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
@@ -277,7 +277,7 @@
             </div>
         </a>
         <!-- Database Management -->
-        <a href="/public/it3/dm.html">
+        <a href="/it3/dm.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
                 <div class="align">
@@ -290,7 +290,7 @@
             </div>
         </a>
         <!--  Linux Operating System -->
-        <a href="/public/it3/linuxOS.html">
+        <a href="/it3/linuxOS.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="Image Not Avilable"
                     srcset="">
@@ -305,7 +305,7 @@
             </div>
         </a>
         <!--  Fundamentals of Software Development -->
-        <a href="/public/it3/FSD.html">
+        <a href="/it3/FSD.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/030.png" alt="" srcset="">
                 <div class="align">
