--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
     <title>KhudKibook</title>
     <link rel="icon" type="image/x-icon" href="https://neo2708.github.io/pic.github.io/bg.png">
     <link rel="stylesheet" href="/styleit1.css">
-    <link rel="stylesheet" href="/slider.css">
+    <link rel="stylesheet" href="slider.css">
     <link rel="stylesheet" href="/index.css">
+    <script src="/src.js"></script>
     <meta name="google-site-verification" content="cQwdBWIbhba4RItxT8gHfbwOF3U6Q9qQtujUT2CtO2s" />
 
 
