--- a/unpublic/it/pythonprogramming.html
+++ b/unpublic/it/pythonprogramming.html
@@ -15,9 +15,10 @@
     <meta name="description"
         content="Download GTU Diploma Sem-1 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
     <link rel="stylesheet" href="/it/pp.css">
-
+    <link rel="stylesheet" href="/it/navinfo.css">
     <link rel="icon" type="image/x-icon" href="https://neo2708.github.io/pic.github.io/bg.png">
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
+        crossorigin="anonymous"></script>
 
 </head>
 
@@ -31,81 +32,115 @@
             <div class="home">
                 <ul>
                     <li>
-                        <a class="home" href="/index.html">Home</a>
+                        <a class="home" id="active" href="/index.html">Home</a>
                     </li>
 
                 </ul>
 
             </div>
 
-            <ul>
-                <li>
-                    <a class="branch" href="/it/index.html">I.T</a>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <a class="branch" id="active" href="/it/index.html">P.P</a>
-                </li>
-            </ul>
+            <div class="home">
+                <ul>
+                    <li>
+                        <a id="" href="">Syllabus</a>
+                        </li>
+                        </ul>
+            </div>
+            <div class="home">
+                <ul>
+                    <li>
+                        <a id="" href="">Papers</a>
+                        </li>
+                        </ul>
+
+            </div>
 
 
     </nav>
     <!-- Cureent Book Info  -->
-    <div class="main">
-        <h1 class="mainheader">Python Programming Study Material </h1>
-        <div class="row">
-            <img class="maincontentimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="Book Photo"
-                srcset="">
-            <div class="design"></div>
-            <div class="cloumn">
-                <!-- <span class="mainheadtext">Download GTU Diploma Engineering book free </span> -->
-                <h1 class="maincontenthead">Python Programming</h1>
-                <h1 class="mdesc">4311601</h1>
-                <h1 class="mdesc2">Credit-5</h1>
-                <div>
-                    <div class="dropdown">
-                        <button class="miandownloadbtn" class="dropbtn">
-                            <div class="drp">
-                                <span>Select Download </span> <img
-                                    src="/assests/expand_more_FILL0_wght400_GRAD0_opsz48.png"
-                                    style="width: 25px;margin-top: 10px;">
-                            </div>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
-                            </a>
-                            <a
-                                href="https://drive.google.com/uc?export=download&id=">UNIT-2
-                            </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1ZhT4_6ccqMNBoX5-paAXV21hjIs45zFk">UNIT-3
-                            </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1kz7AvYv6rk6V4KyL_35BMeE9tqOmseTb">UNIT-4
-                            </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1RUbeQnccxydHyeT5TQrguO9zuagGottB">UNIT-5
-                            </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">Full-Book
-                            </a>
-                        </div>
+    <header>
+        <h1 class="header">Python Programming Study Material </h1>
+    </header>
+    <!-- navinfo -->
+    <div class="navinfo">
+        <div class="navlist">
+            <ul>
+                <li>
+                    <a class="navitem" href="/index.html">Home </a>
+                </li>
+            </ul>
+            <span> > </span>
+            <ul>
+                <li>
+                    <a class="navitem" href="/it/index.html">I.T</a>
+                </li>
+            </ul>
+            <span> > </span>
+            <ul>
+                <li>
+                    <a class="navitem" href="/it/index.html">Sem1</a>
+                </li>
+            </ul>
+            <span> > </span>
+            <ul>
+                <li>
+                    <a id="activelist" href="/it/pythonprogramming.html">PythonProgramming.</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <hr>
+    <main>
+        <div class="main">
+            <div class="row">
+                <img class="maincontentimg" src="/img/013.png" alt="Book Photo" srcset="">
+                <div class="design"></div>
+                <div class="cloumn">
+                    <!-- <span class="mainheadtext">Download GTU Diploma Engineering book free </span> -->
+                    <h1 class="maincontenthead">Python Programming</h1>
+                    <h1 class="mdesc">4311601</h1>
+                    <h1 class="mdesc2">Credit-5</h1>
+                    <div>
+                        <div class="dropdown">
+                            <button class="miandownloadbtn" class="dropbtn">
+                                <div class="drp">
+                                    <span>Book</span> <img src="/assests/expand_more_FILL0_wght400_GRAD0_opsz48.png" style="width: 25px;margin-top: 10px;">
+                                    </div>
+                                    </button>
+                                    <div class="dropdown-content">
+                                        <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
+                                        </a>
+                                <a href="https://drive.google.com/uc?export=download&id=">UNIT-2
+                                </a>
+                                <a href="https://drive.google.com/uc?export=download&id=1ZhT4_6ccqMNBoX5-paAXV21hjIs45zFk">UNIT-3
+                                </a>
+                                <a href="https://drive.google.com/uc?export=download&id=1kz7AvYv6rk6V4KyL_35BMeE9tqOmseTb">UNIT-4
+                                </a>
+                                <a href="https://drive.google.com/uc?export=download&id=1RUbeQnccxydHyeT5TQrguO9zuagGottB">UNIT-5
+                                </a>
+                                <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">Full-Book
+                                </a>
+                                </div>
+                                </div>
+                                <!-- <a href="https://drive.google.com/uc?export=download&id=">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        <input class="miandownloadbtn" type="button" value="Practical">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    </a> -->
+                                <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
+                                    <input class="miandownloadbtn" type="button" value="Syllabus">
+
+                        </a>
+                        <a href="https://drive.google.com/uc?export=download&id=17DM3fINbdhLGB8GSEHOnt3o_gsLJel84">
+                            <input class="miandownloadbtn" type="button" value="Paper">
+
+                        </a>
+
                     </div>
-                    <!-- <a href="https://drive.google.com/uc?export=download&id=">
-                        <input class="miandownloadbtn" type="button" value="Practical">
-                    </a> -->
-                    <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
-                        <input class="miandownloadbtn" type="button" value="Syllabus">
-
-                    </a>
-                    <a href="https://drive.google.com/uc?export=download&id=17DM3fINbdhLGB8GSEHOnt3o_gsLJel84">
-                        <input class="miandownloadbtn" type="button" value="Paper">
-
-                    </a>
 
                 </div>
-
-            </div>
-        </div>
-        <hr>
-    </div>
+                </div>
+                <hr>
+                </div>
+    </main>
     <!-- Recommended -->
     <h1 class="recmainheader">
         Recommnded Acording to your Semester
@@ -194,7 +229,7 @@
     <hr>
     <!-- Bottom nav -->
     <!-- Sem-2 -->
-    <h1 class="recmainheader">Semester-2</h1>
+    <h1 class="recmainheader">Semester-2 <span><a href="#">More</a></span> </h1>
     <div class="recommian">
         <!-- Advance Python -->
         <a href="/it2/app.html">
