--- a/unpublic/it/index.html
+++ b/unpublic/it/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="/it/pp.css">
     <link rel="stylesheet" href="/it/index.css">
+    <link rel="stylesheet" href="/it/navinfo.css">
 
 </head>
 
@@ -36,7 +37,26 @@
             </ul>
 
     </nav>
+    <?php
+    echo "hello"
+        ?>
     <h1 class="header">GTU Diploma I.T</h1>
+    <!-- navinfo -->
+    <div class="navinfo">
+        <div class="navlist">
+            <ul>
+                <li>
+                    <a class="navitem" href="/index.html">Home > </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a id="activelist" href="/it/index.html">Diploma I.T</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <!-- Content -->
     <!-- Sem-1 -->
     <h1 class="header1">Semester-1</h1>
