--- a/public/it/sem1/english.html
+++ b/public/it/sem1/english.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem 1 books download , 4300002 ,English download for free , it">
+        content="gtu diploma sem 1 books download , 4300002 ,gtu English sem 1 book  download for free , it,computer, all branch">
     <meta name="audience" content="Everyone">
     <meta name="description"
         content=" GTU-Diploma  English Sem-1 book Free Download | IT Sem-1 All Study Material free | Get GTU Diploma IT books free download |Sem-1 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Diploma English - KhudKibook </title>
+    <title> GTU IT Diploma English - KhudKibook </title>
     <meta name="description"
         content="Download GTU Diploma Sem-1 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
@@ -29,15 +29,15 @@
         <h1 class="ph748">English Study Material </h1>
     </header>
     <!-- navinfo -->
-    <!-- <div class="nv759">
+    <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
-            <span class="nvsep729"> > </span>
-            <a class="nvi751" href="/it/homepage.html">I.T</a>
-            <span class="nvsep729"> > </span>
+            <span class="nvsep729"> / </span>
+            <a class="nvi751" href="/it/sem1/homepage.html">I.T Sem-1</a>
+            <span class="nvsep729"> / </span>
             <a id="atnvli953" href="/it/sem1/english.html">English</a>
         </div>
-    </div> -->
+    </div>
     <main>
         <div class="mc759351">
 
