--- a/public/it/sem1/homepage.html
+++ b/public/it/sem1/homepage.html
@@ -5,33 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diploma I.T Sem-1</title>
+    <title>GTU Diploma I.T Sem-1</title>
     <link rel="stylesheet" href="/be619.css">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords"
+        content="gtu diploma free books download , sem 1 books  , gtu diploma sem-1 it, GTU, free books , it">
+    <meta name="description"
+        content="Download Free GTU Diploma I.T as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
 
-<style>
-   
-</style>
 </head>
-<style>
-
-</style>
 
 <body>
     <nav id="nav"></nav>
     <header>
-        <h1 class="ph748">Diploma - I.T - Sem-1 - GTU</h1>
+        <h1 class="ph748"> GTU Diploma I.T Sem-1 </h1>
 
     </header>
+    <div class="nv759">
+        <div class="nvl153">
+            <a class="nvi751" href="/index.html">Home </a>
+            <span class="nvsep729"> / </span>
+            <a id="atnvli953" href="/it/sem1/homepage.html">I.T Sem-1</a>
+        </div>
+    </div>
     <main>
         <!-- Exam Timetable -->
 
-        <hr>
+
         <h2 class="altrd">Alert !!!! </h2>
         <div class="atdi257">
-            <a class="albgli86" href="#">Exam Time-Table</a>
+            <a class="albgli86" href="#">Gtu Exam Time-Table</a>
         </div>
-        <hr>
         <!-- Sem-1 -->
         <div aria-label="main content " class="ab12345">
             <!-- Python -->
@@ -64,7 +69,7 @@
                 </div>
             </a>
             <!-- Maths -->
-            <a href="/it/maths.html">
+            <a href="/it/sem1/mathematics.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/008.png" alt="" srcset="">
                     <div class="mali147852">
@@ -78,7 +83,7 @@
                 </div>
             </a>
             <!-- English -->
-            <a href="/it/english.html">
+            <a href="/it/sem1/english.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/014.png" alt="" srcset="">
                     <div class="mali147852">
