--- a/public/it/sem1/introductiontoitsystem.html
+++ b/public/it/sem1/introductiontoitsystem.html
@@ -29,15 +29,15 @@
         <h1 class="ph748">Introduction to IT System Study Material </h1>
     </header>
     <!-- navinfo -->
-    <!-- <div class="nv759">
+    <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
-            <span class="nvsep729"> > </span>
-            <a class="nvi751" href="/it/homepage.html">I.T</a>
-            <span class="nvsep729"> > </span>
+            <span class="nvsep729"> / </span>
+            <a class="nvi751" href="/it/sem1/homepage.html">I.T Sem-1</a>
+            <span class="nvsep729"> / </span>
             <a id="atnvli953" href="/it/sem1/introductiontoitsystem.html">Introduction to IT System</a>
         </div>
-    </div> -->
+    </div>
     <main>
         <div class="mc759351">
 
