--- a/public/it/sem2/engineeringmathematics.html
+++ b/public/it/sem2/engineeringmathematics.html
@@ -31,9 +31,9 @@
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
-            <span class="nvsep729"> > </span>
-            <a class="nvi751" href="/it/homepage.html">I.T </a>
-            <span class="nvsep729"> > </span>
+            <span class="nvsep729"> / </span>
+            <a class="nvi751" href="/it/sem2/homepage.html">I.T Sem-2</a>
+            <span class="nvsep729"> / </span>
             <a id="atnvli953" href="/it/sem2/engieeringmathematics.html">Engieering Mathematics</a>
         </div>
     </div>
