--- a/public/it/sem2/homepage.html
+++ b/public/it/sem2/homepage.html
@@ -19,16 +19,14 @@
 
     </header>
      <!-- navinfo -->
-     <!-- <div class="nv759">
+    <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
-            <span class="nvsep729"> > </span>
-            <a class="nvi751" href="/it/homepage.html">I.T</a>
-            <span class="nvsep729"> > </span>
-            <a id="atnvli953" href="/it/homepage.html">Sem-1</a>
+            <span class="nvsep729"> / </span>
+            <a id="atnvli953" href="/it/sem2/homepage.html">I.T Sem-2</a>
             
         </div>
-    </div> -->
+    </div>
     <main>
         <!-- Sem-2 -->
         <div aria-label="main content " class="ab12345">
