--- a/public/it/sem1/pythonprogramming.html
+++ b/public/it/sem1/pythonprogramming.html
@@ -16,7 +16,7 @@
         content="Download GTU Diploma Sem-1 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
-        crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/cd651.css">
         <link rel="stylesheet" href="/be619.css">
 
@@ -30,15 +30,15 @@
         <h1 class="ph748">Python Programming Study Material </h1>
     </header>
     <!-- navinfo -->
-    <!-- <div class="nv759">
+    <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
-            <span class="nvsep729"> > </span>
-            <a class="nvi751" href="/it/homepage.html">I.T</a>
-            <span class="nvsep729"> > </span>
+            <span class="nvsep729"> /</span>
+            <a class="nvi751" href="/it/sem1/homepage.html">I.T Sem-1</a>
+            <span class="nvsep729"> / </span>
             <a id="atnvli953" href="/it/sem1/pythonprogramming.html">Python Programming</a>
         </div>
-    </div> -->
+    </div>
     <main>
         <div class="mc759351">
 
