--- a/public/it/sem3/datastructurewithpython.html
+++ b/public/it/sem3/datastructurewithpython.html
@@ -33,9 +33,9 @@
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
-            <span class="nvsep729"> > </span>
-            <a class="nvi751" href="/it/homepage.html">I.T </a>
-            <span class="nvsep729"> > </span>
+            <span class="nvsep729"> / </span>
+            <a class="nvi751" href="/it/homepage.html">I.T Sem-3</a>
+            <span class="nvsep729"> / </span>
             <a id="atnvli953" href="/it/sem2/advancepythonprogramming.html">Data Structure With Python</a>
         </div>
     </div>
