--- a/public/it/sem3/homepage.html
+++ b/public/it/sem3/homepage.html
@@ -8,25 +8,6 @@
     <title>Diploma I.T Sem-3</title>
     <link rel="stylesheet" href="/be619.css">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
-
-<!-- <style>
-    .mucn675{
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        z-index: 99;
-        right: 0;
-        top: 0;
-        background-color: rgba(61, 61, 61, 0.587);
-    }
-    .mmmcm34{
-        width: 300px;
-        background-color: black;
-        height: 100%;
-        right: 0;
-        position: fixed;
-    }
-</style> -->
 </head>
 
 <body>
@@ -37,6 +18,14 @@
     <header>
         <h1 class="ph748">Diploma - I.T  -  Sem-3 - GTU</h1>
     </header>
+    <!-- navinfo -->
+    <div class="nv759">
+        <div class="nvl153">
+            <a class="nvi751" href="/index.html">Home </a>
+            <span class="nvsep729"> / </span>
+            <a id="atnvli953" href="/it/sem3/homepage.html">I.T Sem-3</a>
+        </div>
+    </div>
     <main>
         
         <!-- Sem-3 -->
